--- a/adapter-s4j/pom.xml
+++ b/adapter-s4j/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>org.conscrypt</groupId>
             <artifactId>conscrypt-openjdk</artifactId>
-            <version>2.5.2</version>
+            <version>2.6-SNAPSHOT</version>
             <classifier>${os.detected.classifier}</classifier>
         </dependency>
 
