null implementation of existdb driver
prompt$ java -jar ./nb5/target/nb5.jar start driver=existdb workload=./adapter-existdb/src/main/resources/activities/basic.yaml cycles=10

prompt$ java -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=127.0.01:4005 -jar ./nb5/target/nb5.jar start driver=existdb workload=./adapter-existdb/src/main/resources/activities/bindings.yaml cycles=10

— this now works; some previous build nonsense didn’t work

--- a/nb5/pom.xml
+++ b/nb5/pom.xml
@@ -125,6 +125,12 @@
             <version>${revision}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.nosqlbench</groupId>
+            <artifactId>adapter-existdb</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
