--- a/adapter-existdb/pom.xml
+++ b/adapter-existdb/pom.xml
@@ -48,6 +48,21 @@
             <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.sf.xmldb-org/xmldb-api -->
+        <dependency>
+            <groupId>net.sf.xmldb-org</groupId>
+            <artifactId>xmldb-api</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.exist-db/exist-core -->
+        <dependency>
+            <groupId>org.exist-db</groupId>
+            <artifactId>exist-core</artifactId>
+            <version>6.3.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
