--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <module.adapter-kafka>adapter-amqp</module.adapter-kafka>
         <module.adapter-jdbc>adapter-jdbc</module.adapter-jdbc>
         <module.adapter-existdb>adapter-existdb</module.adapter-existdb>
+        <module.adapter-xmlgen>adapter-xmlgen</module.adapter-xmlgen>
 
         <!-- VIRTDATA MODULES -->
         <module.virtdata-api>virtdata-api</module.virtdata-api>
@@ -110,6 +111,7 @@
         <module>adapter-jdbc</module>
         <module>adapter-pinecone</module>
         <module>adapter-existdb</module>
+        <module>adapter-xmlgen</module>
 
         <!-- VIRTDATA MODULES -->
         <module>virtdata-api</module>
