xmlgen adapter - nb5 needs to depend on it

--- a/nb5/pom.xml
+++ b/nb5/pom.xml
@@ -131,6 +131,12 @@
             <version>${revision}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.nosqlbench</groupId>
+            <artifactId>adapter-xmlgen</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
