--- a/adapter-xmlgen/pom.xml
+++ b/adapter-xmlgen/pom.xml
@@ -49,6 +49,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>12.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
